# cem

./: .bmi.yaml  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  Erie_spit_ESPIn.xy  Makefile.am  README.md  bmi.c  bmi.h  bmi_cem.c  bmi_cem.h  bmi_const.h  bmi_main.c  bmi_waves.c  bmi_waves.h  bootstrap  cem.c  cem.prm  cem_main.c  cem_model.c  cem_model.h  cem_parse_functions  configure.in  consts.h  deltas.h  deltas.pc.cmake  deltas_api.c  deltas_api.h  deltas_cli.c  deltas_cli.h  deltas_main.c  deltas_mod.i  environment.yml  globals.h  main.c  main_parse.c  ndelta4.c  ndelta4_api.c  (+11 more)
.bmi-cem/: api.yaml  cem.txt.tmpl  info.yaml  parameters.yaml  run.yaml
.bmi-waves/: api.yaml  info.yaml  parameters.yaml  waves.txt.tmpl
.ci/travis/: deploy_to_anaconda.sh
.github/workflows/: ci.yml  test.yml
archive/: main.c
bmi/: bmi.h  bmi_cem.c
cem/: cem.c  conditions.c  conditions.h  consts.h  rocks.c  rocks.h  utils.c  utils.h
cem-notebook/: cem_run_xy.ipynb
conda-recipe/: meta.yaml
data/: CMakeLists.txt
data/output/: output.50
examples/: README.md  cem.txt  waves.txt
input/: benchmark_config.txt  rodanthe.txt  shoreline_config.txt
testing/: CMakeLists.txt  test_grid.c  test_irf.c  test_meta.c  test_rocks.c  test_time.c  test_utils.c  test_value.c  test_var.c
viz/: animate_shoreline.py
viz-snapshots/notes/: cem_test1_20251024_YSong.md
viz-snapshots/viz/: animate_shoreline_enhanced.py  plot_shoreline.py  plot_shoreline_enhanced.py  requirements.txt
