AC_PREREQ([2.59])

AC_INIT([deltas],[0.1.0],[huttone@colorado.edu])
AC_CONFIG_HEADERS(config.h:config-h.in)
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.9.6 foreign])

AC_PROG_CC


AC_CHECK_PROGS(UNAME,uname)
if test x$UNAME != x ; then
   ARCH_NAME=`uname -s`-`uname -p`
else
   ARCH_NAME="Unknown"
fi

###
### Check for pkg-config.  If it's not found... well lets just hope that
### it's found.
###
PKG_PROG_PKG_CONFIG([0.20])

###
### X11
### --with-x11 turns on X11 and gives the location of X11 on your system
###
AC_ARG_WITH(x11-dir,
   AC_HELP_STRING([--with-x11=PATH], [path to X11]))

AC_ARG_VAR(X11_CFLAGS, [C compiler flags for X11, overriding pkg-config])
AC_ARG_VAR(X11_LIBS, [linker flags for X11, overriding pkg-config])

if test x$X11_CFLAGS == x && test x$X11_LIBS == x ; then
   if test x$PKG_CONFIG != x ; then
      PKG_CONFIG_PATH_save=$PKG_CONFIG_PATH
      export PKG_CONFIG_PATH="${with_x11}/lib/pkgconfig:$PKG_CONFIG_PATH"
      PKG_CHECK_MODULES(X11,x11)
      export PKG_CONFIG_PATH=$PKG_CONFIG_PATH_save
   else
      X11_CFLAGS="-I${with_x11}/include"
      X11_LIBS="-L${with_x11}/lib -lX11"
   fi
fi

CFLAGS="${X11_CFLAGS} $CFLAGS"
LIBS="${X11_LIBS} $LIBS"

if test x$PKG_CONFIG == x ; then
   AC_CHECK_LIB(X11,[main],,[AC_MSG_ERROR(dnl
[libX11 not found.

If pkg-config is installed on you system, consider adding it to you path
or setting the PKG_CONFIG environment variable.

Alternatively, you may set the environment variables X11_CFLAGS and X11_LIBS
to avoid the need to call pkg-config.
])])
fi
AC_CHECK_LIB(GL,[glXChooseVisual],,[AC_MSG_ERROR([libGL not found])])
AC_CHECK_LIB(ncurses,[main],,[AC_MSG_ERROR([libncurses not found])])
AC_CHECK_LIB(m,[pow],,[AC_MSG_ERROR([libm not found])])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT

echo \
"------------------------------------------------------------------------
Configuration:

  Host System Type:           ${ARCH_NAME}
  Source code location:       ${srcdir}
  Install path:               ${prefix}
  Compiler:                   ${CC}
  Compiler flags:             ${CFLAGS}
  Linker flags:               ${LIBS}

  See config.h for further configuration information.
------------------------------------------------------------------------"

